<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello_world">Hello world!</string>

    <!-- Activity -->
    <string name="activity_splashscreen_name">@string/app_name</string>
    <string name="activity_login_name">Connexion</string>
    <string name="activity_signup_name">Inscription</string>
    <string name="activity_restorepassword_name">A l\'aide!</string>
    <string name="activity_home_name">Accueil</string>
    <string name="activity_settings_name">Paramètres</string>
    <string name="activity_projects_name">Projects</string>
    <string name="activity_project_form_name">Projet</string>
    <string name="activity_squads_name">Groupes</string>
    <string name="activity_squad_form_name">Groupe</string>
    <string name="activity_reports_name">Evaluations</string>

    <!-- Activity LogIn -->
    <string name="login_textview_signup">Inscription</string>
    <string name="login_textview_restorepassword">Mot de passe oublié ?</string>
    <string name="login_alertdialog_login_title_error">Erreur connexion</string>
    <string name="login_alertdialog_login_message_error">Identifiants invalides</string>

    <!-- Activity Home -->
    <string name="home_alertdialog_welcome_title">Bienvenue</string>
    <string name="home_alertdialog_welcome_message">Salut</string>

    <!-- Activity SignUp -->
    <string name="signup_form_user_textview_validcheckbox_validation">J\'atteste avoir lu le contrat d\'utilisation</string>
    <string name="signup_alertdialog_signup_title_error">Erreur inscription</string>
    <string name="signup_alertdialog_signup_message_error">Remplir le formulaire d\'inscription</string>

    <!-- Activity Settings -->
    <string name="settings_alertdialog_logout_title">Déconnexion</string>
    <string name="settings_alertdialog_lougout_message_error">Un problème est survenu : impossible de déconnecter</string>
    <string name="settings_textview_security">Sécurité</string>

    <!-- Application -->
    <string name="app_name">ProAdmin</string>

    <!-- Button -->
    <string name="button_login">CONNEXION</string>
    <string name="button_logout">DECONNEXION</string>
    <string name="button_new">NOUVEAU</string>
    <string name="button_save">ENREGISTRER</string>
    <string name="button_reset">RESET</string>
    <string name="button_remove">SUPPRIMER</string>
    <string name="button_add">AJOUTER</string>

    <!-- Dialog -->
    <string name="alertdialog_careful_title">Attention</string>
    <string name="alertdialog_confirm_message">Confirmer ?</string>
    <string name="alertdialog_title_error">Erreur</string>
    <string name="alertdialog_message_error">Une erreur est survenue</string>
    <string name="alertdialog_button_yes">Oui</string>
    <string name="alertdialog_button_no">Non</string>
    <string name="alertdialog_button_ok">OK</string>
    <string name="alertdialog_button_cancel">Annuler</string>

    <!-- EditText -->
    <string name="edittext_firstname_hint">Prénom</string>
    <string name="edittext_lastname_hint">Nom</string>
    <string name="edittext_email_hint">Adresse email</string>
    <string name="edittext_password_hint">Mot de passe</string>
    <string name="edittext_confirmpassword_hint">Confirmer</string>

    <!-- Grid -->
    <string name="griditem_textview">Item</string>

    <!-- Form project -->
    <string name="form_project_textview_title">Détails du projet</string>
    <string name="form_project_textview_year">Année courante</string>
    <string name="form_project_textview_year_creation">Année de création</string>
    <string name="form_project_textview_id">Identifiant</string>
    <string name="form_project_edittext_project_title_hint">Titre</string>
    <string name="form_project_textview_description">Description</string>
    <string name="form_project_button_remove_all">TOUT SUPPRIMER</string>
    <string name="form_project_radiobutton_grade_l1">L1</string>
    <string name="form_project_radiobutton_grade_l2">L2</string>
    <string name="form_project_radiobutton_grade_l3">L3</string>
    <string name="form_project_radiobutton_grade_m1">M1</string>
    <string name="form_project_radiobutton_grade_m2">M2</string>
    <string name="form_project_button_migrate">MIGRER</string>

    <!-- Form squad -->
    <string name="form_squad_textview_title">Détails du groupe</string>
    <string name="form_squad_textview_year">Année courante</string>
    <string name="form_squad_textview_id">Identifiant</string>
    <string name="form_squad_textview_project">Projet</string>
    <string name="form_squad_edittext_squad_name_hint">Nom</string>
    <string name="form_squad_textview_students">Liste des étudiants</string>
    <string name="form_squad_button_students">EDIT STUDENTS</string>

    <!-- Form user -->
    <string name="form_user_textview_identity">Identité</string>
    <string name="form_user_textview_connection">Connexion</string>
    <string name="form_user_textview_validcheckbox">Valider</string>

    <!-- Searchable -->
    <string name="search_hint">Rechercher</string>

    <!-- Spinner -->
    <string name="spinner_year">Année</string>
    <string name="spinner_project">Projet</string>

    <!-- Tab -->
    <string name="tabitem_project_textview_title">Titre</string>
    <string name="tabitem_project_textview_grade">Niveau</string>
    <string name="tabitem_project_textview_nbrsquads">0</string>
    <string name="tabitem_project_title_textview_title">Titre</string>
    <string name="tabitem_project_title_textview_grade">Niveau</string>
    <string name="tabitem_project_title_textview_nbrsquads">Groupes</string>
    <string name="tabitem_squad_textview_name">Nom</string>
    <string name="tabitem_squad_textview_projecttitle"></string>
    <string name="tabitem_squad_title_textview_name">Nom</string>
    <string name="tabitem_squad_title_textview_projecttitle">Projet</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
