<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/form_user_textview_identity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/form_user_textview_identity"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize_medium"
        android:textStyle="bold|italic"
        android:layout_alignParentTop="true"/>

    <View
        android:id="@+id/form_user_dividerview_1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dividerview_height_medium"
        android:layout_marginTop="@dimen/dividerview_margintop"
        android:layout_below="@id/form_user_textview_identity"
        android:background="@color/black"/>

    <EditText
        android:id="@+id/form_user_edittext_firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/form_user_dividerview_1"
        android:background="@drawable/edit_text_holo_light"
        android:layout_marginTop="@dimen/view_margintop_medium"
        android:hint="@string/edittext_firstname_hint"
        android:inputType="textPersonName|textCapWords"
        android:textSize="@dimen/textsize_medium"
        android:imeOptions="actionDone"
        android:singleLine="true"/>

    <EditText
        android:id="@+id/form_user_edittext_lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/form_user_edittext_firstname"
        android:background="@drawable/edit_text_holo_light"
        android:layout_marginTop="@dimen/view_margintop_medium"
        android:hint="@string/edittext_lastname_hint"
        android:inputType="textPersonName|textCapWords"
        android:textSize="@dimen/textsize_medium"
        android:imeOptions="actionDone"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/form_user_textview_connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/form_user_edittext_lastname"
        android:layout_marginTop="@dimen/viewgroup_margintop"
        android:text="@string/form_user_textview_connection"
        android:textColor="@color/black"
        android:textStyle="bold|italic"
        android:textSize="@dimen/textsize_medium"/>

    <View
        android:id="@+id/form_user_dividerview_2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dividerview_height_medium"
        android:layout_below="@id/form_user_textview_connection"
        android:layout_marginTop="@dimen/dividerview_margintop"
        android:background="@color/black"/>

    <EditText
        android:id="@+id/form_user_edittext_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/form_user_dividerview_2"
        android:background="@drawable/edit_text_holo_light"
        android:layout_marginTop="@dimen/view_margintop_medium"
        android:hint="@string/edittext_email_hint"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/textsize_medium"
        android:imeOptions="actionDone"
        android:singleLine="true"/>

</RelativeLayout>
