<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activitycontent_padding"
    android:scrollbars="vertical"
    android:scrollbarStyle="outsideOverlay">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/form_user_textview_identity"
            android:tag="customize_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_user_textview_identity"
            android:textSize="@dimen/textsize_medium"
            android:layout_alignParentTop="true"/>

        <View
            android:id="@+id/form_user_dividerview_1"
            android:tag="customize_1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dividerview_height_medium"
            android:layout_marginTop="@dimen/dividerview_margintop"
            android:layout_below="@id/form_user_textview_identity"/>

        <EditText
            android:id="@+id/form_user_edittext_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/form_user_dividerview_1"
            android:background="@drawable/edit_text_holo_light"
            android:layout_marginTop="@dimen/view_margintop_medium"
            android:hint="@string/edittext_firstname_hint"
            android:inputType="textPersonName|textCapWords"
            android:textSize="@dimen/textsize_medium"
            android:imeOptions="actionDone"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/form_user_edittext_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/form_user_edittext_firstname"
            android:background="@drawable/edit_text_holo_light"
            android:layout_marginTop="@dimen/view_margintop_medium"
            android:hint="@string/edittext_lastname_hint"
            android:inputType="textPersonName|textCapWords"
            android:textSize="@dimen/textsize_medium"
            android:imeOptions="actionDone"
            android:singleLine="true"/>

        <TextView
            android:id="@+id/form_user_textview_connection"
            android:tag="customize_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/form_user_edittext_lastname"
            android:layout_marginTop="@dimen/viewgroup_margintop"
            android:text="@string/form_user_textview_connection"
            android:textSize="@dimen/textsize_medium"/>

        <View
            android:id="@+id/form_user_dividerview_2"
            android:tag="customize_3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dividerview_height_medium"
            android:layout_below="@id/form_user_textview_connection"
            android:layout_marginTop="@dimen/dividerview_margintop"/>

        <EditText
            android:id="@+id/form_user_edittext_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/form_user_dividerview_2"
            android:background="@drawable/edit_text_holo_light"
            android:layout_marginTop="@dimen/view_margintop_medium"
            android:hint="@string/edittext_email_hint"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/textsize_medium"
            android:imeOptions="actionDone"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/form_user_edittext_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/form_user_edittext_email"
            android:background="@drawable/edit_text_holo_light"
            android:layout_marginTop="@dimen/view_margintop_medium"
            android:hint="@string/edittext_password_hint"
            android:inputType="textPassword"
            android:textSize="@dimen/textsize_medium"
            android:imeOptions="actionDone"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/form_user_edittext_confirmpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/form_user_edittext_password"
            android:background="@drawable/edit_text_holo_light"
            android:layout_marginTop="@dimen/view_margintop_medium"
            android:hint="@string/edittext_confirmpassword_hint"
            android:inputType="textPassword"
            android:textSize="@dimen/textsize_medium"
            android:imeOptions="actionDone"
            android:singleLine="true"/>

        <LinearLayout
            android:id="@+id/form_user_linearlayout_checkbox"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/form_user_edittext_confirmpassword"
            android:layout_marginTop="@dimen/viewgroup_margintop">

            <CheckBox
                android:id="@+id/form_user_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/form_user_checkbox_horizontalmargin"
                android:layout_marginRight="@dimen/form_user_checkbox_horizontalmargin"
                android:button="@drawable/btn_check_holo_light"/>

            <TextView
                android:id="@+id/form_user_textview_validcheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:text="@string/form_user_textview_validcheckbox"
                android:textSize="@dimen/textsize_medium"
                android:clickable="true"/>

         </LinearLayout>

    </RelativeLayout>

</ScrollView>