<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/form_project_linearlayout_activity_title"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:background="#116389"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="28dp"
            android:layout_height="30dp"
            android:background="#dda600"
            android:src="@drawable/ic_project" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:background="#dda600"
            android:gravity="center|right"
            android:paddingRight="20dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff"
            android:textSize="12sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/form_project_linearlayout_activity_title"
        android:padding="@dimen/activitycontent_padding"
        android:scrollbarStyle="outsideOverlay">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/form_project_textview_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/form_project_textview_title"
                android:textColor="#dda600"
                android:textSize="@dimen/textsize_medium"
                android:textStyle="bold|italic"/>

            <View
                android:id="@+id/form_project_textview_title_divider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/form_project_textview_title"
                android:layout_marginTop="@dimen/dividerview_margintop"
                android:background="#dda600" />

            <LinearLayout
                android:id="@+id/form_project_linearlayout_year"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:layout_below="@id/form_project_textview_title_divider"
                android:weightSum="2">

                <TextView
                    android:id="@+id/form_project_textview_year"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="left|center_vertical"
                    android:layout_weight="1"
                    android:background="#dda600"
                    android:padding="7dp"
                    android:text="@string/form_project_textview_year"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/form_project_textview_project_year"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="right|center_vertical"
                    android:padding="7dp"
                    android:background="@color/white"
                    android:ellipsize="end" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/form_project_linearlayout_year_creation"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="30dp"
                android:layout_below="@id/form_project_linearlayout_year"
                android:weightSum="2">

                <TextView
                    android:id="@+id/form_project_textview_year_creation"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="left|center_vertical"
                    android:layout_weight="1"
                    android:background="#dda600"
                    android:padding="7dp"
                    android:text="@string/form_project_textview_year_creation"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/form_project_textview_project_year_creation"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="right|center_vertical"
                    android:padding="7dp"
                    android:background="@color/white"
                    android:ellipsize="end" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/form_project_linearlayout_id"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_below="@id/form_project_linearlayout_year_creation"
                android:layout_marginTop="30dp"
                android:weightSum="2"
                android:gravity="center">

                <TextView
                    android:id="@+id/form_project_textview_id"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="left|center_vertical"
                    android:layout_weight="1"
                    android:background="#dda600"
                    android:padding="7dp"
                    android:text="@string/form_project_textview_id"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/form_project_textview_project_id"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="right|center_vertical"
                    android:padding="7dp"
                    android:background="@color/white"
                    android:ellipsize="end"/>

            </LinearLayout>

            <EditText
                android:id="@+id/form_project_edittext_project_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/form_project_linearlayout_id"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:background="@drawable/edit_text_holo_light"
                android:hint="@string/form_project_edittext_project_title_hint"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:singleLine="true" />

            <RadioGroup
                android:id="@+id/form_project_radiogroup_project_grade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/form_project_edittext_project_title"
                android:layout_marginTop="30dp"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="3dp" >

                <RadioButton
                    android:id="@+id/form_project_radiobutton_project_grade_l1"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/form_project_radiobutton_grade_l1" />

                <RadioButton
                    android:id="@+id/form_project_radiobutton_project_grade_l2"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="@string/form_project_radiobutton_grade_l1" />

                <RadioButton
                    android:id="@+id/form_project_radiobutton_project_grade_l3"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="@string/form_project_radiobutton_grade_l3" />

                <RadioButton
                    android:id="@+id/form_project_radiobutton_project_grade_m1"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="@string/form_project_radiobutton_grade_m1" />

                <RadioButton
                    android:id="@+id/form_project_radiobutton_project_grade_m2"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="@string/form_project_radiobutton_grade_m2" />

            </RadioGroup>

            <TextView
                android:id="@+id/form_project_textview_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/form_project_radiogroup_project_grade"
                android:layout_marginTop="30dp"
                android:text="@string/form_project_textview_description"
                android:textColor="#dda600"
                android:textSize="@dimen/textsize_medium"
                android:textStyle="bold|italic" />

            <View
                android:id="@+id/form_project_textview_description_divider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/form_project_textview_description"
                android:layout_marginTop="@dimen/dividerview_margintop"
                android:background="#dda600" />

            <EditText
                android:id="@+id/form_project_textview_project_description"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_below="@id/form_project_textview_description_divider"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:ems="10"
                android:gravity="left|top"
                android:padding="5dp"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine" />

            <RelativeLayout
                android:id="@+id/form_project_relativelayout_buttons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/form_project_textview_project_description"
                android:layout_marginTop="30dp">

                <Button
                    android:id="@+id/form_project_button_migrate"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:background="#dda600"
                    android:text="@string/form_project_button_migrate"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textsize_small"
                    android:textStyle="bold"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/form_project_button_save"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/form_project_button_migrate"
                    android:background="#dda600"
                    android:text="@string/button_save"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textsize_small"
                    android:textStyle="bold"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/form_project_button_remove"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:background="#dda600"
                    android:text="@string/button_remove"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textsize_small"
                    android:textStyle="bold"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/form_project_button_remove_all"
                    android:layout_width="@dimen/button_width_large"
                    android:layout_height="@dimen/button_height"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/form_project_button_remove"
                    android:layout_marginTop="@dimen/view_margintop_medium"
                    android:background="#dda600"
                    android:text="@string/form_project_button_remove_all"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textsize_small"
                    android:textStyle="bold"
                    android:visibility="invisible" />

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>