<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activitycontent_padding"
    android:weightSum="9"
    android:gravity="center">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_app_name"/>

    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:gravity="center">

        <EditText
            android:id="@+id/login_edittext_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_holo_light"
            android:hint="@string/edittext_email_hint"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/textsize_medium"
            android:imeOptions="actionDone"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/login_edittext_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_margintop_medium"
            android:background="@drawable/edit_text_holo_light"
            android:hint="@string/edittext_password_hint"
            android:inputType="textPassword"
            android:textSize="@dimen/textsize_medium"
            android:imeOptions="actionDone"
            android:singleLine="true"/>

        <Button
            android:id="@+id/login_button_connect"
            android:tag="customize_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_margintop_medium"
            android:text="@string/login_button_login"/>

        <TextView
            android:id="@+id/login_textview_restorepassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_margintop_medium"
            android:padding="@dimen/login_textview_restorepassword_padding"
            android:text="@string/login_textview_restorepassword"
            android:textSize="@dimen/textsize_medium"
            android:clickable="true"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <TextView
            android:id="@+id/login_textview_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/login_textview_signup_padding"
            android:text="@string/login_textview_signup"
            android:textSize="@dimen/textsize_medium"
            android:clickable="true"/>

    </RelativeLayout>

</LinearLayout>